# ml_analytics_learning

./: .gitignore  Dockerfile  analysis.ipynb  docker-compose.yml  encodings.json  encodings.pickle  pyproject.toml  variational_autoencoder.ipynb  variational_autoencoder.py
.ipynb_checkpoints/: analysis test-checkpoint.ipynb  analysis-checkpoint.ipynb  variational_autoencoder-checkpoint.ipynb
