[tool.poetry]
name = "ml-analytics-learning"
version = "0.1.0"
description = ""
authors = ["Marc Partensky <marc.partensky@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_analytics_learning"}]

[tool.poetry.dependencies]
python = "3.9.16"
# tensorflow = "*"
keras = "*"
numpy = "*"
kaggle = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
